[gd_scene load_steps=8 format=3 uid="uid://dbdruvih6st8j"]

[ext_resource type="Script" path="res://scripts/basic-bullet.gd" id="1_nr2ty"]
[ext_resource type="PackedScene" uid="uid://bw60ijk5yhl6r" path="res://scenes/tanks/starter/other/bullet-death-particle.tscn" id="2_d8b3y"]
[ext_resource type="Texture2D" uid="uid://cy3n4jejlsel3" path="res://assets/sprites/tanks/starter/basic-bullet.png" id="2_qbj7q"]
[ext_resource type="Script" path="res://scripts/helper-components/Audio2D.gd" id="6_mdv3n"]
[ext_resource type="AudioStream" uid="uid://ditsxgppsyypj" path="res://assets/audio/tanks/bullet-hit-1.mp3" id="7_wfb1x"]
[ext_resource type="AudioStream" uid="uid://g3ph7l463t15" path="res://assets/audio/tanks/bullet-hit-2.mp3" id="8_4k658"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m0co3"]
radius = 15.0333

[node name="Bullet" type="Area2D" node_paths=PackedStringArray("audio_player", "bullet_sprite")]
z_index = -5
collision_layer = 3
collision_mask = 3
script = ExtResource("1_nr2ty")
particle_scene = ExtResource("2_d8b3y")
audio_player = NodePath("Audio2D")
bullet_sprite = NodePath("Bullet")
metadata/is_bullet = true

[node name="Bullet" type="Sprite2D" parent="."]
scale = Vector2(0.32, 0.315789)
texture = ExtResource("2_qbj7q")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Audio2D" type="AudioStreamPlayer2D" parent="."]
volume_db = 3.0
script = ExtResource("6_mdv3n")
sounds = Array[AudioStream]([ExtResource("7_wfb1x"), ExtResource("8_4k658")])
pitch_range = 0.03
external = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_m0co3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
